--- a/Survey-Creater-view/survey-creater/index.html
+++ b/Survey-Creater-view/survey-creater/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="referrer" content="no-referrer" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon"  />
     <title>Survey-Creater</title>
